# tiny-i18n-rs

./: Cargo.toml  README.md  index.html  index.scss
.github/workflows/: deploy.yml  pr_check.yml
src/: lang.rs  main.rs
src/components/: app.rs  mod.rs  select_language.rs
src/components/lang/: lang_context.rs  message.rs  select_language.rs  use_message.rs
src/lang/: de.rs  en_us.rs  es.rs  fr.rs  ja.rs  jp.rs
