[package]
name = "tiny-i18n-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }


[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlSelectElement",
    "Navigator"
]
